--- a/themes/themes-files/Roronoa.theme.css
+++ b/themes/themes-files/Roronoa.theme.css
@@ -8,10 +8,10 @@
  * @website https://betterdiscord.app/theme/Neutron
 */
 
-@import url("https://jatin-sharma01.github.io/discord/themes/themes-cores/neutron8.css");
-@import url("https://jatin-sharma01.github.io/discord/themes/core/badges.css");
-@import url("https://jatin-sharma01.github.io/discord/themes/core/custom-font.css");
-@import url("https://jatin-sharma01.github.io/discord/themes/core/settings-icons.css");
+@import url("https://Jatin-sharma01.github.io/Discord/themes/core/badges.css");
+@import url("https://Jatin-sharma01.github.io/Discord/themes/themes-cores/neutron8.css");
+@import url("https://Jatin-sharma01.github.io/Discord/themes/core/custom-font.css");
+@import url("https://Jatin-sharma01.github.io/Discord/themes/core/settings-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap');
 
 /*##########################################################################
