--- a/themes/themes-cores/Roronoa.css
+++ b/themes/themes-cores/Roronoa.css
@@ -1,4 +1,4 @@
-@import url("https://jatin-sharma01.github.io./disord/themes/core/custom-font.css");
+@import url("https://Jatin-sharma01.github.io./Disord/themes/core/custom-font.css");
 @import url("https://nyri4.github.io/Discolored/main.css");
 
 :root {
