--- a/themes/themes-files/Roronoa.theme.css
+++ b/themes/themes-files/Roronoa.theme.css
@@ -2,8 +2,8 @@
  * @name Roronoa Zoro
  * @version 1.0
  * @description A simple but highly customizable theme, now sugar free!
- * @Jatin Sharma
- * @invite https://discord.gg/hjrScNYVEy
+ * @author Jatin Sharma
+ * @invite hjrScNYVEy
  * @source https://github.com/jatinsharma-01/discord/themes
  * @website https://betterdiscord.app/theme/Neutron
 */
