--- a/themes/themes-files/Roronoa.theme.css
+++ b/themes/themes-files/Roronoa.theme.css
@@ -36,7 +36,7 @@
   --customFont: 'Prompt', sans-serif;
 
   /* HOME BUTTON */
-  --homeImage: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrsVGj-CBjPjkZSJox7r7-hJJcEt9_fZIUtQ&s');
+  --homeImage: url('https://raw.githubusercontent.com/Jatin-sharma01/Discord/refs/heads/main/themes/assets/images%20(1).png');
   --homeImageSize: cover;
 
   /* BACKGROUND */
