--- a/themes/themes-cores/Roronoa.css
+++ b/themes/themes-cores/Roronoa.css
@@ -5,10 +5,10 @@
     --themeColor1: #36D1DC;
     --themeColor2: #5B86E5;
     --font-display: var(--customFont);
-    --homeImage: url('https://imgur.com/eItxuAq.png');
+    --homeImage: url('https://raw.githubusercontent.com/Jatin-sharma01/Discord/refs/heads/main/themes/assets/images%20(1).png');
     --homeImageSize: cover;
     --backgroundColor: #0d0d0d;
-    --backgroundImage: url('https://imgur.com/qhBghXt.png');
+    --backgroundImage: url('https://raw.githubusercontent.com/Jatin-sharma01/Discord/refs/heads/main/themes/assets/zoro-one-piece-forest-night-scene-desktop-wallpaper-4k%20(1).jpg');
     --backgroundPosition: center;
     --backgroundSize: cover;
     --backgroundRepeat: no-repeat;
@@ -3183,7 +3183,7 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    background-image: url("https://imgur.com/eItxuAq.png");
+    background-image: url("https://raw.githubusercontent.com/Jatin-sharma01/Discord/refs/heads/main/themes/assets/images%20(1).png");
 }
 
 .categoryIcon_a1e0e0[data-list-item-id="NO_LIST___soundboard_guild_0"]>.categoryIconIcon_a1e0e0 {
